--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
 </head>
 <body>
     <header>
-        <h1>Tumbaburros</h1>
+        <nav>
+            <div class="nav-container">
+                <img src="imagenes/burro.png" alt="Burro" class="nav-logo">
+                <h1>Tumbaburros</h1>
+            </div>
+        </nav>
     </header>
     <nav>
         <ul>
