--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <nav>
             <div class="nav-container">
-                <img src="imagenes/burro.png" alt="Burro" class="nav-logo">
+                <img src="Imagenes/Burro.png" alt="" class="nav-logo">
                 <h1>Tumbaburros</h1>
             </div>
         </nav>
