--- a/C_Evolution.html
+++ b/C_Evolution.html
@@ -15,15 +15,10 @@
             </div>
         </nav>
     </header>
-    <br>
-    <nav>
-        <ul>
-            <li><a href="C_Evolution.html">Instalar Correo en Evolution</a></li>
-            <li><a href="info2.html">Información 2</a></li>
-        </ul>
-    </nav>
-    <main>
-        <p>Bienvenido al Tumbaburros. Usa el menú para navegar.</p>
-    </main>
+    <ul>
+        <li><a href="index.html">Regresar</a></li>
+    </ul>
+</nav>
+
 </body>
 </html>
